--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ install:
   - gcc --version
   - g++ --version
 script:
-  - conan install . --build=missing
+  - conan install . --build=missing -s compiler.libcxx=libstdc++11
   - cmake . -G "Unix Makefiles"
   - cmake --build .
